<resources>
    <string name="app_name">Stack Overflow Client</string>

    <string name="search">Search</string>

    <string name="votes">votes</string>

    <string name="answers">answers</string>

    <string name="asked_by">asked by</string>

    <string name="empty_search_box">Please enter something in the search field</string>

    <string name="get_more_results">Get more results</string>

    <string name="answered_by">answered by</string>

    <string name="accepted_answer">Accepted Answer</string>

    <string name="unknown_user">unknown</string>
</resources>
